* SVN *

* [CHANGED] Changed {{ article.body }} and added {{ article.content }}

  * {{ article.body }} is now always the article's body, regardless of what template is currently being rendered.
  * {{ article.content }} tries to be a little smart.  On sections with multiple articles, it shows the excerpt, or the body if the excerpt is missing.
  Single article templates show the body.

* [NEW] Added {{ article.excerpt }} liquid tag for accessing an articles excerpt.

* Change - Article#body_for_mode only returns the body, not excerpt + body.  This means you'll have to do this in your templates
if you want to show both:

  {{ article.excerpt }}
  {{ article.body }}

* Activated Assets with searching and tagging.

* Store filters as a single string field, remove the Serialize hacks.

* Bye bye PageNavigation block.

  Change this:

    {% pagenavigation %}
      <li>{{ page.link }}</li>
    {% endpagenavigation %}
  
  to:

    {% for page in pages %}
    <li>{{ page | link_to_page }}</li>
    {% endfor %}

* Enhance the site host validations so it requires a valid domain name.

* Add basic asset support [Justin, Rick]

* fix user fixtures [Cristi Balan]

* Add windows binary file support to acts as attachment [Cristi Balan]

* escape HTML entered for comment author/url fields [Cristi Balan]

* add category tags to the atom feed [Cristi Balan]

* Port the ReferencedPageCaching controller to the Mephisto admin interface [DeLynn Berry]

* Add extra site and search vars [Rick]

  {{ site.articles_per_page }}

  {{ search_string }}
  {{ search_count }}

* Identify current section in Liquid [Rick]

  {{ site.current_section }}
  
  {% for section in site.sections %}
    {% if section.current %}
    {% endif %}
  {% endfor %}

* Fix issue where Articles don't allow comments with comment_age = 0 [Rick]