@@ -4,4 +4,6 @@
                                      :confirm => 'Are you sure you wish to delete this?', :method => :delete %></li>
            <li class="fbucket"><%= link_to_remote 'Add to bucket', :url => add_bucket_asset_path(asset), :html => { :title => 'Add to bucket' }%></li>
          </ul>
-         <%= link_to(asset_image_for(asset, :tiny), asset.public_filename, :target => '_blank') %>
+         <%= link_to(asset_image_for(asset, size || :tiny), asset.public_filename, :target => '_blank') %>
+         <%= "<h4>#{truncate(asset.title, 20)}</h4>" if !asset.image? %>
+         
