@@ -4,6 +4,7 @@
 <%= form_tag(assets_url,:id => 'filesearchform', :method => 'get') %>
   <div id="filter">
     <ul class="clear" id="type">
+      <li id="spin"><img style="display:none;" src="/images/spinner.gif" alt="spinner" id="spinner" />&nbsp;</li>
       <li id="faudio"><a href="#" title="Audio">Audio</a></li>
       <li id="fmovies"><a href="#" title="Movies">Movies</a></li>
       <li id="fpictures"><a href="#" title="Test">Pictures</a></li>
