@@ -1,1 +1,2 @@
 page[:filelist].replace_html :partial => 'assets'
+page[:spinner].hide
