@@ -12,9 +12,10 @@
     <!-- div.header -->
     <div id="header">
       <ul id="sec-nav">
-        <li><%= link_to 'settings', :controller => 'settings' %></li>
-        <li><%= link_to 'account', :controller => 'users', :action => 'show', :id => current_user %></li>
-        <li><%= link_to 'logout', :controller => '/account', :action => 'logout' %></li>
+        <li><strong><%= link_to 'Blog', section_path([]) %></strong></li>
+        <li><%= link_to 'Settings', :controller => 'settings' %></li>
+        <li><%= link_to 'Account', :controller => 'users', :action => 'show', :id => current_user %></li>
+        <li><%= link_to 'Logout', :controller => '/account', :action => 'logout' %></li>
       </ul>
 
       <h1><%= link_to "#{site.title} &mdash; Admin", { :controller => '/admin/overview' }, :title => "#{site.title} admin" %></h1>
