@@ -1,0 +1,477 @@
+/* Hemmingway  Reloaded in lighter colors */
+
+/*-----------------------------------------------------------------------------------------------
+  Global Styles
+-----------------------------------------------------------------------------------------------*/
+
+* {
+        padding:0;
+        margin:0;
+}
+h1, h2, h3, h4, h5, h6, p, pre, blockquote, label, ul, ol, dl, fieldset, address { margin:1em 0; }
+li, dd { margin-left:5%; }
+fieldset { padding: .5em; }
+select option{ padding:0 5px; }
+
+.hide, .print-logo, .close-button{ display:none; }
+.left{ float:left; }
+.right{ float:right; }
+.clear{ clear:both; height:1px; font-size:1px; line-height:1px; }
+a img{ border:none; }
+
+/*-----------------------------------------------------------------------------------------------
+  Layout / Base Page Styling
+-----------------------------------------------------------------------------------------------*/
+
+body{
+        background:#D8D8D8;
+        color:#404040;
+        font-size:11px;
+        font-family:"Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Arial, sans-serif;
+}
+
+/* This class sets the width and position for all rows */
+.inside{
+        width:80%;
+        min-width:65em;
+        max-width:85em;
+        margin:0 auto;
+}
+
+a{
+        color:#000;
+}
+
+h1{
+        color:#333;
+        font-size:1.5em;
+        font-weight:normal;
+        margin:1.5em 0;
+}
+
+h2, h3{
+        font-size:1.15em;
+        color:#000;
+        font-weight:normal;
+}
+h4{
+        font-size:1.1em;
+        color:#000;
+        font-weight:normal;
+}
+
+#primary h2{
+        color:#000;
+}
+
+p{
+        line-height:1.75em;
+}
+
+ul li{
+        list-style-type:square;
+}
+
+blockquote{
+        margin-left:1em;
+        padding-left:1em;
+        border-left:2px solid #CCC;
+        color:#CCC;
+}
+
+/*-----------------------------------------------------------------------------------------------
+  Header
+-----------------------------------------------------------------------------------------------*/
+#header{
+        background:#fff;
+}
+#header .inside{
+        padding:3em 0;
+}
+
+#header h2{
+        font-size:2.25em;
+        margin:0 0.5em 0 0;
+        padding:0 0.5em 0.25em 0;
+        border-right:1px solid #808080;
+        float:left;
+}
+#header h2 a{ text-decoration:none; color: #000000;}
+
+#header p{
+        padding:1em 0;
+        margin:0;
+        line-height:1em;
+}
+
+/*-----------------------------------------------------------------------------------------------
+  Search
+-----------------------------------------------------------------------------------------------*/
+
+
+#search{
+        float:right;
+        width:200px;
+        margin:1em 0 0 0;
+        -moz-opacity:0.4;
+        text-align:right;
+}
+#search:hover{
+        -moz-opacity:1.0;
+}
+#search .searchimg{
+        float:left;
+        width:14px;
+        height:13px;
+        background:url(../images/search.gif) 0 0 no-repeat;
+        position:relative;
+        top:4px;
+}
+#search input{ 
+        width:175px; 
+        font-size: 0.85em; 
+        background:#F8F8F8;
+        margin-top:2px;
+}
+#search input:focus{
+        background:#FFF;
+}
+
+#searchform{
+        margin:1em 0;
+}
+
+#searchform #s{
+        background:#222;
+        border:none;
+        border-bottom:1px solid #333;
+        width:30em;
+        color:#666666;
+        padding:0.25em;
+}
+
+#searchform #searchsubmit{
+        background:#000;
+        color:#666;
+        border:none;
+        font-size:0.9em;
+        text-transform:uppercase;
+        letter-spacing:0.25em;
+}
+
+/*-----------------------------------------------------------------------------------------------
+  Primary Items
+-----------------------------------------------------------------------------------------------*/
+
+#primary{
+        background:#FFFFFF;
+        padding:1px 0 2em 0;
+        color:#7F7F7F;
+}
+
+#primary.onecol-stories .primary{
+        float:left;
+        width:50%;
+}
+#primary.onecol-stories .secondary{
+        float:right;
+        width:40%;
+        margin:0 0 0 10%;
+}
+
+#primary.twocol-stories .story{
+        float:left;
+        width:48%;
+        margin:0 0 0 4%;
+        display:inline;
+}
+* html #primary.twocol-stories .story{
+        margin-left:2%;
+}
+#primary.twocol-stories .first, * html #primary.twocol-stories .first{
+        margin:0 0 0 0;
+}
+
+.story h3{
+        font-size:1.15em;
+        margin:0 0 1.5em 0;
+        font-weight:normal;
+        color:#666666;
+}
+.story h3 a{
+        color:#333;
+        text-decoration:none;
+        border-bottom:1px dotted #666;
+}
+
+.story .details{
+        margin:1em 0;
+        text-align:right;
+        border-top:1px solid #cccccc;
+        padding:0.5em 0;
+        font-size:0.95em;
+        color:#4D4D4D;
+}
+.story .details .read-on{
+        padding-right:20px;
+}
+.story .details a{
+        color:#4D4D4D;
+        text-decoration:none;
+}
+.story .details a:hover{ color:#000; }
+
+/* Single Post Styles */
+
+#primary .primary{
+        float:right;
+        width:65%;
+}
+#primary .secondary{
+        float:right;
+        width:30%;
+        margin-right:5%;
+        padding-top:0.65em;
+        display:inline;
+}
+* html #primary .secondary{ margin-right:4%; }
+
+.secondary .featured p{
+        border-bottom:1px solid #CCCCCC;
+        border-top: 1px solid #CCCCCC;
+        padding:0.5em 0 0.6em 0;
+        line-height:1.5em;
+        margin:1em 0 0 0;
+}
+.secondary .featured dl{
+        margin:0 0;
+        border-bottom:1px solid #CCCCCC;
+        padding:0.5em 0 0.6em 0;
+}
+.secondary dt{
+        display:inline;
+        margin:0;
+        padding:0;
+        color:#AAA;
+}
+.secondary dd{
+        display:inline;
+        margin:0;
+        padding:0;
+}
+.secondary dd a{ color:#808080; }
+.secondary dd a:hover{ color:#000; }
+
+.single-post h1, .single-post h2{ margin-top:0; }
+
+/*-----------------------------------------------------------------------------------------------
+        Secondary Items
+-----------------------------------------------------------------------------------------------*/
+
+#secondary{
+        background:#F3F3F3;
+        padding:1px 2em;
+        border-top:1px solid #E3E3E3;
+}
+
+.comment-head{
+        border-bottom:1px solid #E3E3E3;
+        padding:0.8em 2em 1.0em 2em;
+}
+.comment-head h2{
+        font-size:1.5em;
+        margin:0;
+}
+.comment-head a{
+        text-decoration:none;
+        color:#868686;
+}
+.comment-head .details{
+        font-size:0.95em;
+}
+
+#comments ol{
+        list-style-type:none;
+        margin:2em 0;
+}
+#comments ol li{
+        list-style-type:none;
+        margin:2em 0;
+}
+
+#comments cite{
+        float:left;
+        width:31%;
+        font-style:normal;
+        text-align:right;
+}
+* html #comments cite{ width:30.6%; }
+#comments cite span{
+        display:block;
+}
+#comments cite .author{ font-size:1.2em; }
+#comments cite .author a{
+        text-decoration:none;
+}
+#comments cite .admin-tools{
+        margin:5px 0;
+}
+#comments cite .admin-tools a{
+        float:right;
+        margin:0 5px;
+        padding:0px 3px 3px;
+        background:#666;
+        border:1px solid #999;
+        text-decoration:none;
+}
+#primary .secondary .admin-tools{ margin:1em 0; }
+
+#preview{
+        margin:1em 0;
+        padding:0.5em;
+        border:1px solid #ccc;
+}
+#preview p{ margin:1em 0 0 0; }
+#errors{ color:#FF0000; font-weight:bold; }
+
+#comments .pingback cite .author{
+        display:block;
+        padding-top:68px;
+}
+
+#comments .content{
+        float:left;
+        width:60%;
+        margin-left:1.9%;
+        border-left:1px solid #868686;
+        padding: 0 0 0 2%;
+}
+#comments .content p{
+        margin:0 0 1em 0;
+}
+#comments .content h3{
+        margin:0;
+        font-size:1em;
+}
+
+#comment-form{
+        margin:5em 0 5em 35.4%;
+        width:36em;
+}
+input.textfield, #comment_author, 
+#comment_author_email, #comment_author_url {
+        width: 15em;
+        margin:5px 0;
+}
+textarea.commentbox{
+        width:28em;
+        height:10em;
+        padding:0.25em;
+        margin:5px 0;
+        font-size:1.25em;
+        font-family:Arial, Helvetica, sans-serif;
+}
+label.text{
+        position:relative;
+        left:0.5em;
+        top:-0.5em;
+}
+
+
+.formactions input.submit{ 
+        float:right; 
+        margin:-1em 0 0 0;
+        padding:0 0.5em;
+}
+.formactions .spinner{
+        float:right;
+        margin:-8px -20px 0 0;
+}
+
+/*-----------------------------------------------------------------------------------------------
+  Ancillary Items
+-----------------------------------------------------------------------------------------------*/
+
+#ancillary{
+        padding:2em 0 0 0;
+}
+#ancillary .block{
+        float:left;
+        width: 30%;
+        margin:0 0 0 5%;
+}
+#ancillary .twice-length{ width:65%; }
+#ancillary .thrice-length{ width:100%; }
+* html #ancillary .block{
+        margin:0 0 0 4%;
+}
+#ancillary .first, * html #ancillary .first{
+        clear:both;
+        margin:0;
+}
+#ancillary .block-separator{
+        clear:both;
+        height:2.5em;
+}
+
+#ancillary .block h2, #ancillary .block h3{
+        margin:0 0 2em 0;
+}
+
+ul.dates, ul.counts{
+        list-style-type:none;
+        margin:1.5em 0;
+        border-top:1px solid #C2C2C2;
+}
+ul.dates li, ul.counts li{
+        list-style-type:none;
+        margin:0;
+        padding:0.5em 0;
+        border-bottom:1px solid #C2C2C2;
+}
+ul.dates .date{
+        color:#7A7A7A;
+        padding:0 1.5em 0 0;
+}
+
+ul.counts .count{
+        float:right;
+        color:#7A7A7A;
+}
+
+ul.dates a, ul.counts a{
+        color:inherit;
+        color:#404040;
+        text-decoration:none;
+}
+ul.dates a:hover, ul.dates a:hover .date, ul.counts a:hover, ul.counts a:hover .count{ 
+        color:#000;
+}
+
+/*-----------------------------------------------------------------------------------------------
+  Foooter
+-----------------------------------------------------------------------------------------------*/
+
+#footer{
+        clear:both;
+        color:#6C6C6C;
+        margin:2em 0 3em 0;
+}
+#footer .inside{
+        padding:1em 0;
+}
+#footer p{
+        margin:0;
+        font-size:0.95em;
+}
+#footer p.copyright{ float:left; }
+#footer p.copyright a { color:#525252; }
+#footer p.attributes{ float:right; }
+#footer p.attributes a{
+        padding:0 0 0 1em;
+        text-decoration:none;
+        color:#525252;
+}
+#footer p.attributes a:hover{
+        color:#000;
+}
